--- a/BeerMe/package.json
+++ b/BeerMe/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "~10.0.5",
     "bootstrap": "^4.5.2",
     "bootstrap-icons": "^1.0.0",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
